feat(episode): 감지·확정 업로드와 원고 관리를 확장한다
- 사전 감지와 최종 저장 요청을 분리하고 API 전용 EpisodeUploadType과 detectionOrder 기반 확정 계약을 도입합니다.

- 원본 파일을 재파싱한 본문에 사용자 확정 번호·제목을 적용하도록 Detected와 Finalized 처리 단계를 명확히 나눕니다.

- 제목 수정, 원본 교체, soft delete와 원본·배치·분석 상태가 포함된 회차 조회 응답을 함께 제공합니다.

- 파일 형식·회차 경계·확정 순서·중복 번호 검증을 파서 및 컨트롤러 통합 테스트로 고정합니다.

- 분석 작업 생성·재시도 로직과 설명 문서는 후속 커밋으로 분리합니다.